# Brainbrew

./: .env.sample  .gitignore  AUDIT.md  Dockerfile  README.md  app.py  ci.yml  config.py  dockerfile  install.sh  orchestrator.py  orchestrator.py.orig  pyproject.toml  requirements.txt  setup.py
Dockerfile/: dockerfile
engines/: base.py  ensemble_engine.py  init.py  judge_engine.py  teacher_engine.py  vllm_engine.py
old/: app.py.orig  config.py  document_loader.py.orig  lora_trainer.py.orig
pipeline/: __init__.py  cleaners.py  dataset_builder.py  document_loader.py  evaluator.py  evol_instruct.py  exporter.py  sanitizer.py  stats.py
publish/: __init__.py  hf_publisher.py
tests/: __init__.py  conftest.py  test_config.py  test_document_loader.py  test_exporter.py  test_lora_trainer.py  test_orchestrator.py  test_publisher.py  test_security.py
training/: __init__.py  lora_trainer.py  lora_trainer.py.orig
